--- a/LoginTP/login.html
+++ b/LoginTP/login.html
@@ -12,10 +12,20 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
     <title>Ingresar</title>
+    <style>
+        .social-box {
+            padding: 70px!important;
+        }
+        
+        .social-box a {
+            font-weight: bold;
+            font-size: 18px;
+            padding: 30px!important;
+        }
+    </style>
 </head>
 
 <body>
-
     <!--Contenido principal -->
     <main>
         <div class="contenedorPrincipal">
@@ -29,7 +39,7 @@
                                 <div class="col-md-12">
                                     <a href="#" id="GoogleBoton" class="btn btn-danger btn-block">
                                         <i class="fa fa-google fa-fw">
-                                      </i>Login with Google+
+                                  </i>Login with Google+
                                     </a>
                                 </div>
                             </div>
@@ -40,32 +50,9 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="main">
-
-                            <input id="email" type="text" class="form-control" placeholder="Email" autofocus>
-                            <div id="comentario1">
-
-                            </div>
-
-                            <input id="contraseña" type="password" class="form-control" placeholder="Contraseña">
-                            <span class="clearfix"></span>
-                        </div>
-                        <div class="login-footer">
-                            <div class="row">
-                                <div class="col-xs-6 col-md-6">
-                                    <div class="left-section">
-                                        <a href="" onclick="RestablecerContraseña();" data-toggle="modal" data-target="#myModal">¿Olvido su Contraseña?</a>
-
-                                        <a href="Ingresar.html">Registrarse</a>
-                                    </div>
-                                </div>
-                                <div class="col-xs-6 col-md-6 pull-right">
-                                    <button type="submit" class="btn btn-large btn-primary pull-right">Inciar Sesión</button>
-                                </div>
-                            </div>
 
                         </div>
+
                     </form>
                 </div>
             </div>
