--- a/PantallasPrincipales/PaginaPrincipal.html
+++ b/PantallasPrincipales/PaginaPrincipal.html
@@ -218,7 +218,7 @@
                 <li>
                     <div class="dropdown">
                         <button><i class="  fa fa-user-o w3-margin-top " aria-hidden="true"></i></button>
-                        <div class="dropdown-content" i="dropdown">
+                        <div class="dropdown-content" id="dropdown">
                             <a href="#">Iniciar sesión</a>
                             <a href="#">Registrarse</a>
                         </div>
