--- a/PantallasPrincipales/PaginaPrincipal.html
+++ b/PantallasPrincipales/PaginaPrincipal.html
@@ -211,14 +211,14 @@
                     <div class="form-group">
                         <input type="search" class="form-control  w3-margin-top" placeholder="Buscar.." id="search">
                     </div>
-                    <button type="submit" class="btn  w3-margin-top" onclick="Search();"><i class="glyphicon glyphicon-search"></i></button>
+                    <button type="submit" class="btn  w3-margin-top"><i class="glyphicon glyphicon-search"></i></button>
 
                 </form>
 
                 <li>
                     <div class="dropdown">
                         <button><i class="  fa fa-user-o w3-margin-top " aria-hidden="true"></i></button>
-                        <div class="dropdown-content" id="dropdown">
+                        <div class="dropdown-content">
                             <a href="#">Iniciar sesión</a>
                             <a href="#">Registrarse</a>
                         </div>
@@ -339,6 +339,8 @@
 
         </div>
     </footer>
+
+
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/menuprincipal.js"></script>
     <script type="text/javascript" src="js/jquery-3.4.1.js"></script>
